--- a/src/onegov/form/locale/it_CH/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/it_CH/LC_MESSAGES/onegov.form.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2024-07-02 14:42+0200\n"
+"POT-Creation-Date: 2025-01-27 10:34+0100\n"
 "PO-Revision-Date: 2022-03-07 13:55+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: Italian\n"
@@ -41,12 +41,6 @@ msgstr "Generale"
 msgid "Title"
 msgstr "Titolo"
 
-msgid "Text"
-msgstr "Testo"
-
-msgid "Multiline"
-msgstr "Multilinea"
-
 msgid "E-Mail"
 msgstr "E-Mail"
 
@@ -54,7 +48,22 @@ msgid "Website"
 msgstr "Sito web"
 
 msgid "Video Link"
-msgstr ""
+msgstr "Link video"
+
+msgid "Text fields"
+msgstr "Campi di testo"
+
+msgid "Text"
+msgstr "Testo"
+
+msgid "Limited text"
+msgstr "Testo limitato"
+
+msgid "Numbers-only textfield (regex)"
+msgstr "Campo di testo solo numeri (regex)"
+
+msgid "Multiline with optional number of rows"
+msgstr "Multilinea con numero di righe opzionale"
 
 msgid "Comment"
 msgstr "Commento"
@@ -92,6 +101,9 @@ msgstr "Immagine"
 msgid "Document"
 msgstr "Documento"
 
+msgid "Documents (Multiple upload)"
+msgstr "Documenti (Caricamento multiplo)"
+
 msgid "Numbers"
 msgstr "Numeri"
 
@@ -100,6 +112,9 @@ msgstr "Età"
 
 msgid "Percentage"
 msgstr "Percentuale"
+
+msgid "Amount with Price"
+msgstr "Importo con prezzo"
 
 msgid "Extended"
 msgstr "Esteso"
@@ -115,6 +130,9 @@ msgstr "Identificatore aziendale svizzero"
 
 msgid "Swiss vat number"
 msgstr "Partita iva svizzera"
+
+msgid "Password"
+msgstr "Password"
 
 msgid "Markdown"
 msgstr "Markdown"
@@ -173,11 +191,12 @@ msgstr ""
 "campo prezzo."
 
 #, python-format
-msgid "The '{label}' group is empty and will not be visible. Either "
-"remove the empty group or add fields to it."
+msgid ""
+"The '{label}' group is empty and will not be visible. Either remove the "
+"empty group or add fields to it."
 msgstr ""
-"Il gruppo '{label}' è vuoto e non sarà visibile. Rimuovere il gruppo vuoto "
-"o aggiungere campi."
+"Il gruppo '{label}' è vuoto e non sarà visibile. Rimuovere il gruppo vuoto o "
+"aggiungere campi."
 
 #, python-format
 msgid ""
@@ -189,7 +208,7 @@ msgstr ""
 
 #, python-format
 msgid ""
-"Invalid field type for field '{label}'. Please use the plus-icon to add "
+"Invalid field type for field '${label}'. Please use the plus-icon to add "
 "allowed field types."
 msgstr ""
 
@@ -240,3 +259,6 @@ msgstr "Nessun risultato corrisponde"
 
 msgid "Select Some Options"
 msgstr "Seleziona alcune opzioni"
+
+#~ msgid "Multiline"
+#~ msgstr "Multilinea"
