--- a/src/onegov/form/locale/rm_CH/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/rm_CH/LC_MESSAGES/onegov.form.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2024-07-02 14:42+0200\n"
+"POT-Creation-Date: 2025-01-27 10:34+0100\n"
 "PO-Revision-Date: 2017-06-28 12:03+0200\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: Romansh\n"
@@ -39,12 +39,6 @@ msgstr ""
 msgid "Title"
 msgstr ""
 
-msgid "Text"
-msgstr ""
-
-msgid "Multiline"
-msgstr ""
-
 msgid "E-Mail"
 msgstr ""
 
@@ -52,6 +46,21 @@ msgid "Website"
 msgstr ""
 
 msgid "Video Link"
+msgstr ""
+
+msgid "Text fields"
+msgstr ""
+
+msgid "Text"
+msgstr ""
+
+msgid "Limited text"
+msgstr ""
+
+msgid "Numbers-only textfield (regex)"
+msgstr ""
+
+msgid "Multiline with optional number of rows"
 msgstr ""
 
 msgid "Comment"
@@ -90,6 +99,9 @@ msgstr ""
 msgid "Document"
 msgstr ""
 
+msgid "Documents (Multiple upload)"
+msgstr ""
+
 msgid "Numbers"
 msgstr ""
 
@@ -97,6 +109,9 @@ msgid "Age"
 msgstr ""
 
 msgid "Percentage"
+msgstr ""
+
+msgid "Amount with Price"
 msgstr ""
 
 msgid "Extended"
@@ -112,6 +127,9 @@ msgid "Swiss business identifier"
 msgstr ""
 
 msgid "Swiss vat number"
+msgstr ""
+
+msgid "Password"
 msgstr ""
 
 msgid "Markdown"
@@ -164,13 +182,19 @@ msgstr ""
 
 #, python-format
 msgid ""
+"The '{label}' group is empty and will not be visible. Either remove the "
+"empty group or add fields to it."
+msgstr ""
+
+#, python-format
+msgid ""
 "Invalid field type for field '{label}'. For filters only 'select' or "
 "'multiple select' fields are allowed."
 msgstr ""
 
 #, python-format
 msgid ""
-"Invalid field type for field '{label}'. Please use the plus-icon to add "
+"Invalid field type for field '${label}'. Please use the plus-icon to add "
 "allowed field types."
 msgstr ""
 
