Allow mulitple links, move below contact

--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-01-08 16:47+0100\n"
+"POT-Creation-Date: 2025-01-28 15:26+0100\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -1020,6 +1020,9 @@ msgstr "Images de taille normale"
 msgid "Grid layout"
 msgstr "Mise en page en grille"
 
+msgid "Show images on homepage"
+msgstr "Montrer les images sur la page d'accueil"
+
 msgid "By filename"
 msgstr "Par nom de fichier"
 
@@ -1028,9 +1031,6 @@ msgstr "Par légende"
 
 msgid "By last change"
 msgstr "Par date de dernière modification"
-
-msgid "Show images on homepage"
-msgstr "Montrer les images sur la page d'accueil"
 
 msgid "Used in the overview and the e-mail subject"
 msgstr "Utilisé dans l'aperçu et le sujet de l'e-mail"
@@ -2771,6 +2771,24 @@ msgstr ""
 msgid "Sidebar links"
 msgstr "Liens dans la barre latérale"
 
+msgid "Contact link"
+msgstr ""
+
+msgid "Sidebar contact"
+msgstr ""
+
+msgid "Please provide a URL if contact link text is set"
+msgstr ""
+
+msgid "Please provide link text if contact URL is set"
+msgstr ""
+
+msgid "Contact Text"
+msgstr ""
+
+msgid "Contact URL"
+msgstr ""
+
 msgid "Delete content when expired"
 msgstr "Supprimer le contenu lorsqu'il est expiré"
 
@@ -2959,8 +2977,8 @@ msgstr "Refuser ${title} est irréversible."
 msgid "Reject reservation"
 msgstr "Refuser la réservation"
 
-#.
 #. Used in sentence: "${event} published."
+#.
 msgid "Event"
 msgstr "Événement"
 
@@ -3314,8 +3332,8 @@ msgid ""
 "filled-out form."
 msgstr ""
 "Veuillez vérifier vos données et appuyez sur « Compléter » pour finaliser le "
-"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur "
-"« Modifier » pour retourner sur le formulaire complété."
+"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur « "
+"Modifier » pour retourner sur le formulaire complété."
 
 msgid ""
 "The image shown in the list view is a square. To have your image shown fully "
