--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-01-08 16:47+0100\n"
+"POT-Creation-Date: 2025-01-28 15:26+0100\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -1020,6 +1020,9 @@ msgstr "Grosse Bilder"
 msgid "Grid layout"
 msgstr "Raster"
 
+msgid "Show images on homepage"
+msgstr "Bilder auf der Startseite zeigen"
+
 msgid "By filename"
 msgstr "Nach Dateiname"
 
@@ -1028,9 +1031,6 @@ msgstr "Nach Beschreibung"
 
 msgid "By last change"
 msgstr "Nach Zeitpunkt der letzten Änderung"
-
-msgid "Show images on homepage"
-msgstr "Bilder auf der Startseite zeigen"
 
 msgid "Used in the overview and the e-mail subject"
 msgstr "Wird in der Übersicht und als E-Mail Subjekt verwendet"
@@ -2769,6 +2769,24 @@ msgstr ""
 msgid "Sidebar links"
 msgstr "Links in der Sidebar"
 
+msgid "Contact link"
+msgstr ""
+
+msgid "Sidebar contact"
+msgstr ""
+
+msgid "Please provide a URL if contact link text is set"
+msgstr ""
+
+msgid "Please provide link text if contact URL is set"
+msgstr ""
+
+msgid "Contact Text"
+msgstr ""
+
+msgid "Contact URL"
+msgstr ""
+
 msgid "Delete content when expired"
 msgstr "Inhalt löschen nachdem abgelaufen"
 
@@ -2958,8 +2976,8 @@ msgstr "Die Absage von ${title} kann nicht rückgängig gemacht werden."
 msgid "Reject reservation"
 msgstr "Reservation absagen"
 
-#.
 #. Used in sentence: "${event} published."
+#.
 msgid "Event"
 msgstr "Veranstaltung"
 
