--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-01-28 08:31+0100\n"
+"POT-Creation-Date: 2025-01-28 17:16+0100\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -2796,22 +2796,22 @@ msgid "Sidebar links"
 msgstr "Links in der Sidebar"
 
 msgid "Contact link"
-msgstr ""
+msgstr "Kontaktlink"
 
 msgid "Sidebar contact"
-msgstr ""
+msgstr "Kontakt in der Sidebar"
 
 msgid "Please provide a URL if contact link text is set"
-msgstr ""
+msgstr "Bitte geben Sie eine URL an, wenn der Kontaktlink-Text gesetzt ist"
 
 msgid "Please provide link text if contact URL is set"
-msgstr ""
+msgstr "Bitte geben Sie einen Link-Text an, wenn die Kontakt-URL gesetzt ist"
 
 msgid "Contact Text"
-msgstr ""
+msgstr "Kontakttext"
 
 msgid "Contact URL"
-msgstr ""
+msgstr "Kontakt-URL"
 
 msgid "Delete content when expired"
 msgstr "Inhalt löschen nachdem abgelaufen"
@@ -2823,9 +2823,6 @@ msgstr ""
 
 msgid "Delete content"
 msgstr "Inhalt löschen"
-
-msgid "Photo album. Will be shown at the end of content."
-msgstr "Fotoalbum. Wird am Ende des Inhalts angezeigt."
 
 msgid "Photo album"
 msgstr "Fotoalbum"
@@ -4475,6 +4472,15 @@ msgstr "Dateien zur Prüfung hierhin ziehen"
 
 msgid "No subscribers yet"
 msgstr "Noch keine Abonnenten"
+
+msgid ""
+"This recipient has delivery failures, including hard bounces, invalid email "
+"addresses, spam complaints, manual deactivations, or being blocked. We "
+"recommend unsubscribing it from the list."
+msgstr ""
+"Dieser Empfänger hat Zustellungsfehler, einschließlich Hard Bounces, "
+"ungültige E-Mail-Adresse, Spam-Beschwerde, manuelle Deaktivierung oder wird "
+"blockiert. Wir empfehlen, ihn von der Liste abzumelden."
 
 msgid "submitted"
 msgstr "gemeldet"
@@ -6254,28 +6260,3 @@ msgstr "Ein Konto wurde für Sie erstellt"
 
 msgid "The user was created successfully"
 msgstr "Der Benutzer wurde erfolgreich erstellt"
-
-msgid "This recipient has delivery failures, including hard bounces, invalid email addresses, spam complaints, manual deactivations, or being blocked. We recommend unsubscribing it from the list."
-msgstr "Dieser Empfänger hat Zustellungsfehler, einschließlich Hard Bounces, ungültige E-Mail-Adresse, Spam-Beschwerde, manuelle Deaktivierung oder wird blockiert. Wir empfehlen, ihn von der Liste abzumelden."
-
-#~ msgid "Describes in detail how this form is to be used"
-#~ msgstr "Beschreibt detailliert wie dieses Formular benutzt werden soll"
-
-#~ msgid "Photo album. Will be shown at the end of content."
-#~ msgstr "Fotoalbum. Wird am Ende des Inhalts angezeigt."
-
-#~ msgid "Include logo in newsletter"
-#~ msgstr "Logo im Newsletter anzeigen"
-
-#~ msgid "Newsletter Subscription"
-#~ msgstr "Newsletter-Abonnement"
-
-#~ msgid ""
-#~ "Thank you for filling out this survey. If there's anything you'd like to "
-#~ "change, click on \"Edit\" below."
-#~ msgstr ""
-#~ "Vielen Dank für Ihre Teilnahme an dieser Umfrage. Falls Sie noch etwas "
-#~ "ändern möchten, klicken Sie auf den \"Bearbeiten\"-Button unten."
-
-#~ msgid "Rule updated"
-#~ msgstr "Regel aktualisiert"
