--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -1068,6 +1068,15 @@ msgstr "Nachfolgend sehen Sie Ihre Chat-Konversation:"
 msgid "Have a great day!"
 msgstr "Wir wünschen Ihnen einen schönen Tag!"
 
+msgid "Notify on newsletter unsubscription"
+msgstr "Benachrichtigung bei Abmeldung vom Newsletter"
+
+msgid "Send an email notification when a user unsubscribes from the newsletter"
+msgstr "Sende eine E-Mail-Benachrichtigung, wenn sich ein Benutzer vom Newsletter abmeldet"
+
+msgid "The user with the address <strong>${address}</strong> just unsubscribed from the newsletter subscriber list."
+msgstr "Der Benutzer mit der Adresse <strong>${address}</strong> hat sich soeben von der Newsletter-Abonnentenliste abgemeldet."
+
 msgid "Hello"
 msgstr "Grüezi"
 
