--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -3855,6 +3855,20 @@ msgstr "Heute keine Reservationen."
 msgid "Have a great day!"
 msgstr "Wir wünschen Ihnen einen schönen Tag!"
 
+msgid "Notify on newsletter unsubscription"
+msgstr "Benachrichtigung bei Abmeldung vom Newsletter"
+
+msgid "Send an email notification to the following users when a recipient "
+"unsubscribes from the newsletter"
+msgstr "Sende eine E-Mail-Benachrichtigung an die folgenden Benutzer, wenn "
+"sich ein Empfänger vom Newsletter abmeldet"
+
+msgid "Unsubscription from newsletter"
+msgstr "Abmeldung vom Newsletter"
+
+msgid "The user with the address ${address} just unsubscribed from the newsletter subscriber list."
+msgstr "Der Benutzer mit der Adresse ${address} hat sich soeben von der Newsletter-Abonnentenliste abgemeldet."
+
 msgid ""
 "This is the daily reservation overview for ${organisation}. If you no longer "
 "want to receive this e-mail please contact an administrator so they can "
@@ -5499,6 +5513,11 @@ msgid "Welcome to the ${org} Newsletter"
 msgstr "Willkommen beim ${org} Newsletter"
 
 #, python-format
+msgid ""
+"Success! We have added ${address} to the list of recipients."
+msgstr ""
+"Erfolg! Wir haben ${address} zur Liste der Empfänger hinzugefügt."
+
 msgid ""
 "Success! We have added ${address} to the list of recipients. Subscribed "
 "categories are ${subscribed}."
