--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-01-28 08:31+0100\n"
+"POT-Creation-Date: 2025-01-30 15:51+0100\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -1922,6 +1922,16 @@ msgstr ""
 "    - Unterthema 3.1\n"
 "```"
 
+msgid "Notify on newsletter unsubscription"
+msgstr "Benachrichtigung bei Abmeldung vom Newsletter"
+
+msgid ""
+"Send an email notification to the following users when a recipient "
+"unsubscribes from the newsletter"
+msgstr ""
+"Sende eine E-Mail-Benachrichtigung an die folgenden Benutzer, wenn sich ein "
+"Empfänger vom Newsletter abmeldet"
+
 msgid "Invalid YAML format. Please refer to the example."
 msgstr "Ungültiges YAML Format. Bitte beachten Sie das Beispiel."
 
@@ -2600,6 +2610,9 @@ msgstr "Exporte"
 msgid "Payment Providers"
 msgstr "Zahlungsanbieter"
 
+msgid "Datatrans"
+msgstr "Datatrans"
+
 msgid "Synchronise"
 msgstr "Synchronisieren"
 
@@ -2806,9 +2819,6 @@ msgstr ""
 msgid "Delete content"
 msgstr "Inhalt löschen"
 
-msgid "Photo album. Will be shown at the end of content."
-msgstr "Fotoalbum. Wird am Ende des Inhalts angezeigt."
-
 msgid "Photo album"
 msgstr "Fotoalbum"
 
@@ -2987,8 +2997,8 @@ msgstr "Die Absage von ${title} kann nicht rückgängig gemacht werden."
 msgid "Reject reservation"
 msgstr "Reservation absagen"
 
-#. Used in sentence: "${event} published."
 #.
+#. Used in sentence: "${event} published."
 msgid "Event"
 msgstr "Veranstaltung"
 
@@ -3855,20 +3865,6 @@ msgstr "Heute keine Reservationen."
 msgid "Have a great day!"
 msgstr "Wir wünschen Ihnen einen schönen Tag!"
 
-msgid "Notify on newsletter unsubscription"
-msgstr "Benachrichtigung bei Abmeldung vom Newsletter"
-
-msgid "Send an email notification to the following users when a recipient "
-"unsubscribes from the newsletter"
-msgstr "Sende eine E-Mail-Benachrichtigung an die folgenden Benutzer, wenn "
-"sich ein Empfänger vom Newsletter abmeldet"
-
-msgid "Unsubscription from newsletter"
-msgstr "Abmeldung vom Newsletter"
-
-msgid "The user with the address ${address} just unsubscribed from the newsletter subscriber list."
-msgstr "Der Benutzer mit der Adresse ${address} hat sich soeben von der Newsletter-Abonnentenliste abgemeldet."
-
 msgid ""
 "This is the daily reservation overview for ${organisation}. If you no longer "
 "want to receive this e-mail please contact an administrator so they can "
@@ -4062,6 +4058,13 @@ msgstr "Klicken Sie hier, um die Web-Version anzuzeigen."
 
 msgid "You no longer wish to receive the newsletter?"
 msgstr "Sie möchten den Newsletter nicht mehr erhalten?"
+
+msgid ""
+"The user with the address ${address} just unsubscribed from the newsletter "
+"subscriber list."
+msgstr ""
+"Der Benutzer mit der Adresse ${address} hat sich soeben von der Newsletter-"
+"Abonnentenliste abgemeldet."
 
 msgid "Click the following link to set a new password:"
 msgstr "Klicken Sie auf den folgenden Link, um ein neues Passwort zu setzen:"
@@ -4471,6 +4474,15 @@ msgstr "Dateien zur Prüfung hierhin ziehen"
 
 msgid "No subscribers yet"
 msgstr "Noch keine Abonnenten"
+
+msgid ""
+"This recipient has delivery failures, including hard bounces, invalid email "
+"addresses, spam complaints, manual deactivations, or being blocked. We "
+"recommend unsubscribing it from the list."
+msgstr ""
+"Dieser Empfänger hat Zustellungsfehler, einschließlich Hard Bounces, "
+"ungültige E-Mail-Adresse, Spam-Beschwerde, manuelle Deaktivierung oder wird "
+"blockiert. Wir empfehlen, ihn von der Liste abzumelden."
 
 msgid "submitted"
 msgstr "gemeldet"
@@ -5456,14 +5468,14 @@ msgstr ""
 "Der Totalbetrag für Ihre Eingaben beläuft sich auf ${total} allerdings ist "
 "der Minimalbetrag ${minimum}. Bitte ändern Sie ihre Eingaben."
 
+msgid "Registrations are no longer possible"
+msgstr "Anmeldungen sind nicht mehr möglich"
+
 msgid "Pay Online and Complete"
 msgstr "Online zahlen und abschliessen"
 
 msgid "Your payment could not be processed"
 msgstr "Ihre Zahlung konnte nicht verarbeitet werden"
-
-msgid "Registrations are no longer possible"
-msgstr "Anmeldungen sind nicht mehr möglich"
 
 msgid "Your registration has been confirmed"
 msgstr "Ihre Anmeldung wurde bestätigt"
@@ -5514,16 +5526,15 @@ msgstr "Willkommen beim ${org} Newsletter"
 
 #, python-format
 msgid ""
-"Success! We have added ${address} to the list of recipients."
-msgstr ""
-"Erfolg! Wir haben ${address} zur Liste der Empfänger hinzugefügt."
-
-msgid ""
 "Success! We have added ${address} to the list of recipients. Subscribed "
 "categories are ${subscribed}."
 msgstr ""
 "Erfolg! Wir haben ${address} zur Liste der Empfänger hinzugefügt. Abonnierte "
 "Kategorien sind ${subscribed}."
+
+#, python-format
+msgid "Success! We have added ${address} to the list of recipients."
+msgstr "Erfolg! Wir haben ${address} zur Liste der Empfänger hinzugefügt."
 
 #, python-format
 msgid ""
@@ -5653,6 +5664,12 @@ msgstr "Die Zahlung wurde eingenommen"
 msgid "The payment was refunded"
 msgstr "Die Zahlung wurde rückerstattet"
 
+msgid "The payment is already captured but is still processing"
+msgstr "Die Zahlung wurde bereits eingenommen, aber wurde noch nicht fertig verarbeitet"
+
+msgid "Could not refund the payment"
+msgstr "Die Zahlung konnte nicht rückerstattet werden"
+
 msgid "As default"
 msgstr "Als Standard"
 
@@ -5701,8 +5718,29 @@ msgstr "Der Zahlungsanbieter wurde gelöscht."
 msgid "Successfully synchronised payments"
 msgstr "Synchronisierung erfolgreich"
 
+msgid "Merchant Name"
+msgstr "Händlername"
+
+msgid "UPP Username"
+msgstr "UPP Benutername"
+
+msgid "UPP Password"
+msgstr "UPP Passwort"
+
+msgid "Webhook Signing Key"
+msgstr "Webhook Signier-Schlüssel"
+
 msgid "Charge fees to customer"
 msgstr "Kreditkarten-Gebühren dem Kunden verrechnen"
+
+msgid "Use sandbox environment (for testing)"
+msgstr "Sandbox Umbegung verwenden (nur für Testing)"
+
+msgid "Datatrans has been added"
+msgstr "Datatrans wurde hinzugefügt"
+
+msgid "Add Datatrans"
+msgstr "Datatrans hinzufügen"
 
 msgid "Added a new person"
 msgstr "Eine neue Person wurde hinzugefügt"
@@ -5974,6 +6012,9 @@ msgstr "Themen"
 msgid "You have successfully unsubscribed from the newsletter at ${address}"
 msgstr ""
 "Sie haben die Mail-Adresse ${address} erfolgreich vom Newsletter abgemeldet"
+
+msgid "Unsubscription from newsletter"
+msgstr "Abmeldung vom Newsletter"
 
 msgid "A survey with this name already exists"
 msgstr "Eine Umfrage mit diesem Namen existiert bereits"
@@ -6256,14 +6297,11 @@ msgstr "Ein Konto wurde für Sie erstellt"
 msgid "The user was created successfully"
 msgstr "Der Benutzer wurde erfolgreich erstellt"
 
-msgid "This recipient has delivery failures, including hard bounces, invalid email addresses, spam complaints, manual deactivations, or being blocked. We recommend unsubscribing it from the list."
-msgstr "Dieser Empfänger hat Zustellungsfehler, einschließlich Hard Bounces, ungültige E-Mail-Adresse, Spam-Beschwerde, manuelle Deaktivierung oder wird blockiert. Wir empfehlen, ihn von der Liste abzumelden."
+#~ msgid "Photo album. Will be shown at the end of content."
+#~ msgstr "Fotoalbum. Wird am Ende des Inhalts angezeigt."
 
 #~ msgid "Describes in detail how this form is to be used"
 #~ msgstr "Beschreibt detailliert wie dieses Formular benutzt werden soll"
-
-#~ msgid "Photo album. Will be shown at the end of content."
-#~ msgstr "Fotoalbum. Wird am Ende des Inhalts angezeigt."
 
 #~ msgid "Include logo in newsletter"
 #~ msgstr "Logo im Newsletter anzeigen"
