--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-01-28 08:31+0100\n"
+"POT-Creation-Date: 2025-01-30 15:51+0100\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -1928,6 +1928,16 @@ msgstr ""
 "  - Thème 3:\n"
 "  - Sous-thème 3.1```"
 
+msgid "Notify on newsletter unsubscription"
+msgstr "Notifier le désabonnement à la lettre d'information"
+
+msgid ""
+"Send an email notification to the following users when a recipient "
+"unsubscribes from the newsletter"
+msgstr ""
+"Envoyer une notification par e-mail aux utilisateurs suivants lorsqu'un "
+"destinataire se désabonne de la newsletter"
+
 msgid "Invalid YAML format. Please refer to the example."
 msgstr "Format YAML non valide. Veuillez vous référer à l'exemple."
 
@@ -2597,6 +2607,9 @@ msgstr "Exports"
 msgid "Payment Providers"
 msgstr "Opérateurs de paiement"
 
+msgid "Datatrans"
+msgstr "Datatrans"
+
 msgid "Synchronise"
 msgstr "Synchroniser"
 
@@ -2805,9 +2818,6 @@ msgstr ""
 msgid "Delete content"
 msgstr "Supprimer le contenu"
 
-msgid "Photo album. Will be shown at the end of content."
-msgstr "Album photo. Sera affiché à la fin du contenu."
-
 msgid "Photo album"
 msgstr "Album photo"
 
@@ -2986,8 +2996,8 @@ msgstr "Refuser ${title} est irréversible."
 msgid "Reject reservation"
 msgstr "Refuser la réservation"
 
-#. Used in sentence: "${event} published."
 #.
+#. Used in sentence: "${event} published."
 msgid "Event"
 msgstr "Événement"
 
@@ -3344,8 +3354,8 @@ msgid ""
 "filled-out form."
 msgstr ""
 "Veuillez vérifier vos données et appuyez sur « Compléter » pour finaliser le "
-"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur « "
-"Modifier » pour retourner sur le formulaire complété."
+"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur "
+"« Modifier » pour retourner sur le formulaire complété."
 
 msgid ""
 "The image shown in the list view is a square. To have your image shown fully "
@@ -3856,20 +3866,6 @@ msgstr "Aucune réservation aujourd'hui."
 msgid "Have a great day!"
 msgstr "Passez une bonne journée!"
 
-msgid "Notify on newsletter unsubscription"
-msgstr "Notifier le désabonnement à la lettre d'information"
-
-msgid "Send an email notification to the following users when a recipient "
-"unsubscribes from the newsletter"
-msgstr "Envoyer une notification par e-mail aux utilisateurs suivants lorsqu'un "
-"destinataire se désabonne de la newsletter"
-
-msgid "Unsubscription from newsletter"
-msgstr "Se désabonner de la lettre d'information"
-
-msgid "The user with the address ${address} just unsubscribed from the newsletter subscriber list."
-msgstr "L'utilisateur dont l'adresse est ${address} vient de se désinscrire de la liste des abonnés à la lettre d'information."
-
 msgid ""
 "This is the daily reservation overview for ${organisation}. If you no longer "
 "want to receive this e-mail please contact an administrator so they can "
@@ -4064,6 +4060,13 @@ msgstr "Cliquer ici pour voir la version internet."
 
 msgid "You no longer wish to receive the newsletter?"
 msgstr "Vous ne souhaitez plus recevoir la lettre d'informations ?"
+
+msgid ""
+"The user with the address ${address} just unsubscribed from the newsletter "
+"subscriber list."
+msgstr ""
+"L'utilisateur dont l'adresse est ${address} vient de se désinscrire de la "
+"liste des abonnés à la lettre d'information."
 
 msgid "Click the following link to set a new password:"
 msgstr "Cliquer sur le lien suivant pour définir un nouveau mot de passe :"
@@ -4474,6 +4477,15 @@ msgstr "Déposez les fichiers pour les vérifier"
 
 msgid "No subscribers yet"
 msgstr "Pas encore d'abonnés"
+
+msgid ""
+"This recipient has delivery failures, including hard bounces, invalid email "
+"addresses, spam complaints, manual deactivations, or being blocked. We "
+"recommend unsubscribing it from the list."
+msgstr ""
+"Ce destinataire a des échecs de livraison, y compris des rebonds, des "
+"adresses e-mail invalides, des plaintes pour spam, des désactivations "
+"manuelles, ou est bloqué. Nous recommandons de le désinscrire de la liste."
 
 msgid "submitted"
 msgstr "soumis"
@@ -5473,14 +5485,14 @@ msgstr ""
 "Le montant total pour les données actuellement saisies est de ${total} mais "
 "doit être au moins ${minimum}. Veuillez ajuster vos entrées."
 
+msgid "Registrations are no longer possible"
+msgstr "Les inscriptions ne sont plus possibles"
+
 msgid "Pay Online and Complete"
 msgstr "Payer en ligne et compléter"
 
 msgid "Your payment could not be processed"
 msgstr "Votre paiement n'a pas pu être traité"
-
-msgid "Registrations are no longer possible"
-msgstr "Les inscriptions ne sont plus possibles"
 
 msgid "Your registration has been confirmed"
 msgstr "Votre inscription a été confirmée"
@@ -5531,16 +5543,15 @@ msgstr "Bienvenue sur la lettre d'information ${org}"
 
 #, python-format
 msgid ""
-"Success! We have added ${address} to the list of recipients."
-msgstr ""
-"Succès! Nous avons ajouté ${address} à la liste des destinataires."
-
-msgid ""
 "Success! We have added ${address} to the list of recipients. Subscribed "
 "categories are ${subscribed}."
 msgstr ""
 "Succès! Nous avons ajouté ${address} à la liste des destinataires. Les "
 "catégories abonnées sont ${subscribed}."
+
+#, python-format
+msgid "Success! We have added ${address} to the list of recipients."
+msgstr "Succès! Nous avons ajouté ${address} à la liste des destinataires."
 
 #, python-format
 msgid ""
@@ -5669,6 +5680,12 @@ msgstr "Le paiement a été saisi"
 msgid "The payment was refunded"
 msgstr "Le paiement a été remboursé"
 
+msgid "The payment is already captured but is still processing"
+msgstr "Le paiement a déjà été saisi mais est encore en cours de traitement"
+
+msgid "Could not refund the payment"
+msgstr "Impossible de rembourser le paiement"
+
 msgid "As default"
 msgstr "Par défaut"
 
@@ -5718,8 +5735,29 @@ msgstr "Le prestataire de paiement a été supprimé."
 msgid "Successfully synchronised payments"
 msgstr "Les paiements ont été synchronisés avec succès"
 
+msgid "Merchant Name"
+msgstr "Nom du marchand"
+
+msgid "UPP Username"
+msgstr "UPP Username"
+
+msgid "UPP Password"
+msgstr "UPP Password"
+
+msgid "Webhook Signing Key"
+msgstr "Clé de signature du webhook"
+
 msgid "Charge fees to customer"
 msgstr "Facturer le client"
+
+msgid "Use sandbox environment (for testing)"
+msgstr "Utiliser l'environnement sandbox (pour les tests)"
+
+msgid "Datatrans has been added"
+msgstr "Datatrans a été ajouté"
+
+msgid "Add Datatrans"
+msgstr "Ajouter Datatrans"
 
 msgid "Added a new person"
 msgstr "Nouvelle personne ajoutée"
@@ -5991,6 +6029,9 @@ msgstr "Sujets"
 msgid "You have successfully unsubscribed from the newsletter at ${address}"
 msgstr ""
 "Vous vous êtes désabonné avec succès de la lettre d'information à ${address}."
+
+msgid "Unsubscription from newsletter"
+msgstr "Se désabonner de la lettre d'information"
 
 msgid "A survey with this name already exists"
 msgstr "Une enquête avec ce nom existe déjà"
@@ -6271,9 +6312,6 @@ msgstr "Un compte a été créé pour vous"
 
 msgid "The user was created successfully"
 msgstr "L'utilisateur a bien été créé"
-
-msgid "This recipient has delivery failures, including hard bounces, invalid email addresses, spam complaints, manual deactivations, or being blocked. We recommend unsubscribing it from the list."
-msgstr "Ce destinataire a des échecs de livraison, y compris des rebonds, des adresses e-mail invalides, des plaintes pour spam, des désactivations manuelles, ou est bloqué. Nous recommandons de le désinscrire de la liste."
 
 #~ msgid "Photo album. Will be shown at the end of content."
 #~ msgstr "Album photo. Sera affiché à la fin du contenu."
